force-app/main/default/objects/aecm__Process_Stakeholder__c/aecm__Process_Stakeholder__c.object-meta.xml
<CustomObject>
    <description>This object contains relationships between processes and stakeholders for Purvue.</description>
    <label>Process Stakeholder</label>
    <nameField>
        <displayFormat>PS-{00000}</displayFormat>
        <label>Process Stakeholder #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Stakeholder</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>