force-app/main/default/objects/aecm__Process_Stakeholder__c/fields/aecm__Process__c.field-meta.xml
<CustomField>
    <fullName>aecm__Process__c</fullName>
    <description>Process related to to the process stakeholder junction record.</description>
    <label>Process</label>
    <referenceTo>aecm__Process__c</referenceTo>
    <relationshipLabel>Process Stakeholder</relationshipLabel>
    <relationshipName>Process_Stakeholder</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>