force-app/main/default/objects/aecm__Process_Stakeholder__c/fields/aecm__RACI__c.field-meta.xml
<CustomField>
    <fullName>aecm__RACI__c</fullName>
    <description>RACI for the Stakeholder listed on the process stakeholder junction record.</description>
    <label>RACI</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>aecm__Stakeholder_RACI</valueSetName>
    </valueSet>
</CustomField>