force-app/main/default/objects/aecm__Process_Stakeholder__c/fields/aecm__Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>aecm__Stakeholder__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Stakeholder related to the process stakeholder junction record.</description>
    <label>Stakeholder</label>
    <referenceTo>aecm__Stakeholder__c</referenceTo>
    <relationshipLabel>Process Stakeholder</relationshipLabel>
    <relationshipName>Process_Stakeholder</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>