force-app/main/default/objects/aecm__Process_Stakeholder__c/fields/aecm__Stakeholder_Name__c.field-meta.xml
<CustomField>
    <fullName>aecm__Stakeholder_Name__c</fullName>
    <description>Stakeholders name from the user record.</description>
    <formula>aecm__Stakeholder__r.Owner:User.FirstName &amp;&quot; &quot;&amp; aecm__Stakeholder__r.Owner:User.LastName</formula>
    <label>Stakeholder Name</label>
    <type>Text</type>
</CustomField>