force-app/main/default/objects/aecm__Process_Stakeholder__c/listViews/aecm__All.listView-meta.xml
<ListView>
    <fullName>aecm__All</fullName>
    <columns>NAME</columns>
    <columns>aecm__Entity__c</columns>
    <columns>aecm__Process__c</columns>
    <columns>aecm__Stakeholder__c</columns>
    <columns>aecm__Stakeholder_Name__c</columns>
    <columns>aecm__RACI__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>